--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "color": "^5.0.0",
+    "image-q": "^4.0.0",
     "immutability-helper": "^3.1.1",
-    "mui": "^0.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-force-graph": "^1.47.6",
     "react-force-graph-3d": "^1.26.1"
   },
   "devDependencies": {
@@ -30,6 +29,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "d3-force-3d": "^3.0.6",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
